Fix bugs that missed certain files when creating .exe